# TesisG

./: .gitignore  README.md  d
catkin_ws/src/blur_image/: CMakeLists.txt  package.xml
catkin_ws/src/blur_image/src/: #student_func.cu#  main.cpp  student_func.cu
catkin_ws/src/color_seg/: CMakeLists.txt  package.xml
catkin_ws/src/color_seg/src/: color_seg.cu  main.cpp  procesar.cpp
catkin_ws/src/color_seg_vhgw/: CMakeLists.txt  package.xml
catkin_ws/src/color_seg_vhgw/src/: #main_vhwg.cpp#  .#main2.cpp  color_seg_vhgw.cu  main2.cpp  procesar.cpp
catkin_ws/src/cuda_opencv_test/: CMakeLists.txt  package.xml
catkin_ws/src/cuda_opencv_test/src/: HW1.cpp  Makefile  main.cpp  reference_calc.cpp  student_func.cu
catkin_ws/src/cuda_test/: CMakeLists.txt  package.xml
catkin_ws/src/cuda_test/src/: helloWorld.cu  main.cpp
catkin_ws/src/hsv_alg/: CMakeLists.txt  package.xml
catkin_ws/src/hsv_alg/src/: #hsv_alg_node.cpp#  .#hsv_alg_node.cpp  hsv_alg_node.cpp
catkin_ws/src/opencv_test/: CMakeLists.txt  package.xml
catkin_ws/src/opencv_test/src/: opencv_test_nod.cpp
catkin_ws/src/opencv_video_test/: CMakeLists.txt  package.xml
catkin_ws/src/opencv_video_test/src/: #opencv_video_test_node.cpp#  HW1.cpp  color_seg.cu  opencv_video_test_node.cpp
catkin_ws/src/pi_packages/autostart/: CMakeLists.txt  package.xml
catkin_ws/src/pi_packages/autostart/scripts/: autostart_node.py  autostart_node_.py
catkin_ws/src/pi_packages/camera_test/: CMakeLists.txt
catkin_ws/src/pi_packages/camera_test/src/: camera_test_node.cpp
catkin_ws/src/pi_packages/color_tracker/: CMakeLists.txt  package.xml
catkin_ws/src/pi_packages/color_tracker/src/: color_tracker_node.cpp
catkin_ws/src/pi_packages/jack_test/: CMakeLists.txt
catkin_ws/src/pi_packages/jack_test/src/: in_to_out.cpp  jack_test_node.cpp
catkin_ws/src/red_eye_correction/: #CMakeLists.txt#  CMakeLists.txt  package.xml
catkin_ws/src/red_eye_correction/src/: HW4.cu  main.cpp
catkin_ws/src/tone_mapping/: CMakeLists.txt  package.xml
catkin_ws/src/tone_mapping/src/: HW3.cu  main.cpp
catkin_ws/src/vhgw_test/: CMakeLists.txt  package.xml
catkin_ws/src/vhgw_test/src/: color_seg.cu  color_segmenter.cu  vhgw_node.cpp
catkin_ws/src/video_test/: CMakeLists.txt  package.xml
catkin_ws/src/video_test/src/: HW1.cpp  main.cpp
